--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <div class="overview">
             <span class="toggle">close</span>
             <header class="header">
-  <img alt="Microsoft Azure" style="width: 140px; vertical-align: middle" src="img/msazure_logo.png"/>
+  <img alt="AWS" style="width: 110px; vertical-align: middle" src="img/aws_logo.png"/>
   <img alt="Red Hat OpenShift" style="width: 100px; vertical-align: middle" src="img/redhat-openshift.png"/>
 </header>
             <ul id="nav">
@@ -321,7 +321,7 @@
 
 <h4 id="rosa-cli-demonstration">ROSA CLI Demonstration</h4>
 
-<p>Need a cmd line demo blah blah pre-amble.</p>
+<p>Here are some of the more commonly used ROSA commands.</p>
 
 <!-- Begin collapsible container div -->
 <div class="collapsible-content-container">
@@ -331,8 +331,6 @@
   <div class="collapsible-content">
     <!-- Begin parsedText -->
     
-<p>Login as cluster-admin per the Lab Guide and RHPDS email w/ password.</p>
-
 <p>rosa login [arguments] (to login)</p>
 
 <p>rosa verify permissions [arguments] (e.g. rosa verify permissions –region=ap-southeast-2) - (to verify the AWS permissions are set correctly for the specified region)</p>
