--- a/index.html
+++ b/index.html
@@ -293,13 +293,6 @@
 
 <p><img src="media/diagram.png" alt="Diagram" /></p>
 
-<h4 id="ssh-session">SSH Session</h4>
-<p>So our first step will be to SSH into the jump host. Details will be provided by the instructor providing the command to run and the required password.</p>
-
-<p>It will look similar to this: <strong>ssh student01@3.104.30…</strong></p>
-
-<p><img src="media/jumpssh.png" alt="Jump host SSH" /></p>
-
         </section>
     
 
@@ -672,25 +665,13 @@ ImageStream and Builds: <a href="https://cloudowski.com/articles/why-managing-co
   <div class="collapsible-content">
     <!-- Begin parsedText -->
     
-<blockquote>
-  <p><strong>Note</strong> Be sure to logout of any Microsoft accounts prior to accessing the login screens or you will not be given the option to login with the account we provide.</p>
-</blockquote>
+<p>Using console URL link provided, you will be directed to the login page. Enter your login details that have also been provided by the instructor.</p>
 
-<p>Using console URL link provided, you will be directed to the login page. Select the <strong>RHPDS-AAD</strong> option.</p>
-
-<p><img src="media/aro-loginpage.png" alt="ARO Login Page" /></p>
-
-<p>You will be forwarded to a Microsoft login screen - select <strong>Use another account</strong> if you have other Microsoft account listed - where you will use the login details provided.</p>
-
-<p><img src="media/aro-loginpageMS1.png" alt="Microsoft Login Page" /> <img src="media/aro-loginpageMS2.png" alt="Microsoft User Login Page" /> <img src="media/aro-loginpageMS3.png" alt="Microsoft Password Login Page" /></p>
+<p><img src="media/loginpage.png" alt="Login Page" /></p>
 
 <p>From here you will be taken to the OpenShift web console landing page.</p>
 
-<blockquote>
-  <p><strong>Note</strong> Some browsers may take you back to the initial OpenShift login screen where you will need select the RHPDS-AAD icon once more.</p>
-</blockquote>
-
-<p><img src="media/aro-landing.png" alt="ARO Landing Page" /></p>
+<p><img src="media/landing.png" alt="Landing Page" /></p>
 
 
     <!-- End parsedText -->
@@ -724,7 +705,7 @@ ImageStream and Builds: <a href="https://cloudowski.com/articles/why-managing-co
 <p><img src="media/login-command.png" alt="Copy login command link" /></p>
 
 <blockquote>
-  <p><strong>Note</strong> Some browsers may take you back to the initial OpenShift login screen where you will need select the RHPDS-AAD icon once more.</p>
+  <p><strong>Note</strong> Some browsers may take you back to the initial OpenShift login screen where you will need to re-enter your details.</p>
 </blockquote>
 
 <p>Click <strong>Display Token</strong>, then copy the command in the section <strong>Log in with this token</strong>.</p>
