update yaml source files

--- a/index.html
+++ b/index.html
@@ -1418,8 +1418,8 @@ ImageStream and Builds: <a href="https://cloudowski.com/articles/why-managing-co
   <li>OSToy microservice container image: <a href="https://quay.io/aroworkshop/ostoy-microservice">https://quay.io/aroworkshop/ostoy-microservice</a></li>
   <li>Deployment Definition YAMLs:
     <ul>
-      <li><a href="/yaml/ostoy-fe-deployment.yaml">ostoy-fe-deployment.yaml</a></li>
-      <li><a href="/yaml/ostoy-microservice-deployment.yaml">ostoy-microservice-deployment.yaml</a></li>
+      <li><a href="https://github.com/RH-ANZ-Workshops/anzworkshop/blob/main/yaml/ostoy-fe-deployment.yaml">ostoy-fe-deployment.yaml</a></li>
+      <li><a href="https://github.com/RH-ANZ-Workshops/anzworkshop/blob/main/yaml/ostoy-microservice-deployment.yaml">ostoy-microservice-deployment.yaml</a></li>
     </ul>
   </li>
 </ul>
@@ -1515,9 +1515,9 @@ to build a new example application <span class="k">in </span>Ruby. Or use kubect
 
 <p>Download the Kubernetes deployment object yamls from the following locations to jump host to a directory of your choosing - just remember where you placed them for the next step.</p>
 
-<p><code class="language-plaintext highlighter-rouge">wget https://raw.githubusercontent.com/brianstinehart/ocpworkshop/master/yaml/ostoy-fe-deployment.yaml</code></p>
+<p><code class="language-plaintext highlighter-rouge">wget https://github.com/RH-ANZ-Workshops/anzworkshop/blob/main/yaml/ostoy-fe-deployment.yaml</code></p>
 
-<p><code class="language-plaintext highlighter-rouge">wget https://raw.githubusercontent.com/brianstinehart/ocpworkshop/master/yaml/ostoy-microservice-deployment.yaml</code></p>
+<p><code class="language-plaintext highlighter-rouge">wget https://github.com/RH-ANZ-Workshops/anzworkshop/blob/main/yaml/ostoy-microservice-deployment.yaml</code></p>
 
 <!-- Begin collapsible container div -->
 <div class="collapsible-content-container">
