wget link update

--- a/index.html
+++ b/index.html
@@ -1515,9 +1515,9 @@ to build a new example application <span class="k">in </span>Ruby. Or use kubect
 
 <p>Download the Kubernetes deployment object yamls from the following locations to jump host to a directory of your choosing - just remember where you placed them for the next step.</p>
 
-<p><code class="language-plaintext highlighter-rouge">wget https://github.com/RH-ANZ-Workshops/anzworkshop/blob/main/yaml/ostoy-fe-deployment.yaml</code></p>
+<p><code class="language-plaintext highlighter-rouge">wget https://raw.githubusercontent.com/RH-ANZ-Workshops/anzworkshop/main/yaml/ostoy-fe-deployment.yaml</code></p>
 
-<p><code class="language-plaintext highlighter-rouge">wget https://github.com/RH-ANZ-Workshops/anzworkshop/blob/main/yaml/ostoy-microservice-deployment.yaml</code></p>
+<p><code class="language-plaintext highlighter-rouge">wget https://raw.githubusercontent.com/RH-ANZ-Workshops/anzworkshop/main/yaml/ostoy-microservice-deployment.yaml</code></p>
 
 <!-- Begin collapsible container div -->
 <div class="collapsible-content-container">
@@ -1529,9 +1529,9 @@ to build a new example application <span class="k">in </span>Ruby. Or use kubect
     
 <p>Feel free to open them up and take a look at what we will be deploying. For simplicity of this lab we have placed all the Kubernetes objects we are deploying in one “all-in-one” yaml file.  Though in reality there are benefits to separating these out into individual yaml files.</p>
 
-<p><a href="https://github.com/brianstinehart/ocpworkshop/blob/master/yaml/ostoy-fe-deployment.yaml">ostoy-fe-deployment.yaml</a></p>
+<p><a href="https://github.com/RH-ANZ-Workshops/anzworkshop/blob/main/yaml/ostoy-fe-deployment.yaml">ostoy-fe-deployment.yaml</a></p>
 
-<p><a href="https://github.com/brianstinehart/ocpworkshop/blob/master/yaml/ostoy-microservice-deployment.yaml">ostoy-microservice-deployment.yaml</a></p>
+<p><a href="https://github.com/RH-ANZ-Workshops/anzworkshop/blob/main/yaml/ostoy-microservice-deployment.yaml">ostoy-microservice-deployment.yaml</a></p>
 
 
     <!-- End parsedText -->
