--- a/index.html
+++ b/index.html
@@ -1061,9 +1061,15 @@ ImageStream and Builds: <a href="https://cloudowski.com/articles/why-managing-co
 
 <p>Change the Content Type from GitHub’s default <strong>application/x-www-form-urlencoded</strong> to <strong>application/json</strong>.</p>
 
+<p>Update the <strong>SSL verification</strong> to <strong>“Disable (not recommended)”</strong></p>
+
 <p>Click <strong>Add webhook</strong>.</p>
 
 <p><img src="media/rating-api-github-addwebhook.png" alt="GitHub add webhook" /></p>
+
+<p>You will likely see a warning message appear about the effect of disabling SSL verification and its implications. Confirm the setting change, as this is a non-production environment.</p>
+
+<p><img src="media/rating-api-github-addwebhook-warning.png" alt="GitHub add webhook warning" /></p>
 
 <p>If you click back into the newly created webhook, you should see a message from at the bottom with a green tick under <strong>Recent Deliveries</strong>.</p>
 
@@ -1255,9 +1261,15 @@ ImageStream and Builds: <a href="https://cloudowski.com/articles/why-managing-co
 
 <p>Change the Content Type from GitHub’s default <strong>application/x-www-form-urlencoded</strong> to <strong>application/json</strong>.</p>
 
+<p>Update the <strong>SSL verification</strong> to <strong>“Disable (not recommended)”</strong></p>
+
 <p>Click <strong>Add webhook</strong>.</p>
 
-<p><img src="media/rating-web-github-addwebhook.png" alt="GitHub add webhook" /></p>
+<p><img src="media/rating-api-github-addwebhook.png" alt="GitHub add webhook" /></p>
+
+<p>Again, you will likely see a warning message appear about the effect of disabling SSL verification and its implications. Confirm the setting change, as this is a non-production environment.</p>
+
+<p><img src="media/rating-api-github-addwebhook-warning.png" alt="GitHub add webhook warning" /></p>
 
 <p>If you click back into the newly created webhook, you should see a message from at the bottom with a green tick under <strong>Recent Deliveries</strong>.</p>
 
