--- a/index.html
+++ b/index.html
@@ -2082,7 +2082,7 @@ ostoy-frontend-679cb85695-5cn7x       1/1       Running   0          1h
 ostoy-microservice-86b4c6f559-p594d   1/1       Running   0          1h
 </code></pre></div></div>
 
-<p>Let’s change our microservice definition yaml to reflect that we want 3 pods instead of the one we see.  Download the <a href="/yaml/ostoy-microservice-deployment.yaml">ostoy-microservice-deployment.yaml</a> and save it on your local machine.</p>
+<p>Let’s change our microservice definition yaml to reflect that we want 3 pods instead of the one we see.  Download the <a href="https://github.com/RH-ANZ-Workshops/anzworkshop/blob/main/yaml/ostoy-microservice-deployment.yaml">ostoy-microservice-deployment.yaml</a> and save it on your local machine.</p>
 
 <p>Open the file using your favorite editor. Ex: <code class="language-plaintext highlighter-rouge">vi ostoy-microservice-deployment.yaml</code>.</p>
 
