--- a/index.html
+++ b/index.html
@@ -698,6 +698,8 @@ ImageStream and Builds: <a href="https://cloudowski.com/articles/why-managing-co
 
 <p><img src="media/web-terminal.png" alt="Web Terminal" /></p>
 
+<p>Once you click start, the Web Terminal will automatically be connected to the project you just created. You’ll notice the Web Console updates with that project as well.</p>
+
 
     <!-- End parsedText -->
   </div>
